--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>TastyTrove</title>
   </head>
   <body>
+    <!-- Nav Bar -->
     <nav class="p-3 shadow-md flex items-center gap-1 md:pl-5">
       <img
         src="./assets/Logo TastyTrove.png"
@@ -25,6 +26,8 @@
       />
       <h1 class="font-semibold text-lg sm:text-xl text-clifford">TastyTrove</h1>
     </nav>
+
+    <!-- Search Section -->
     <div class="searchPage">
       <div class="p-4">
         <h1
@@ -64,8 +67,10 @@
       </div>
     </div>
 
+    <!-- Recipe Data -->
     <div id="singleRecipe" class="mt-10 px-3 max-w-[800px] mx-auto"></div>
 
+    <!-- Categories -->
     <div class="mt-20 px-3 max-w-[1000px] mx-auto">
       <h1 class="text-center font-semibold text-xl md:text-2xl lg:text-3xl">
         Categories
@@ -89,6 +94,7 @@
       <div id="data" class="grid grid-cols-2 md:grid-cols-4 gap-5 my-10"></div>
     </div>
 
+    <!-- Footer -->
     <footer
       class="bg-lightGreen p-3 shadow-md flex flex-col items-center mt-20"
     >
